--- a/templates/dish_detail.html
+++ b/templates/dish_detail.html
@@ -1,74 +1,69 @@
-<!DOCTYPE html>
+{% extends "base.html" %}
 {% load static %}
-<html lang="en">
+{% block title %}{{ dish.name }} - План питания{% endblock %}
+{% block content %}
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="{% static 'style.css' %}">
-    <title>План питания на неделю, меню, рецепты, список покупок. Классическое меню, безуглеводное меню</title>
-</head>
-<body>
-    <header>
-        <nav class="navbar navbar-expand-md navbar-light fixed-top navbar__opacity">
-            <div class="container">
-                <a class="navbar-brand" href="#">
-                    <img src="{% static 'img/logo.8d8f24edbb5f.svg' %}" height="55" width="189" alt="">
-                </a>
-                <button class="btn btn-outline-success me-2 shadow-none foodplan_green foodplan__border_green">Назад</button>
-            </div>
-        </nav>
-    </header>
-    <main style="margin-top: calc(2rem + 75px);">
+<header>
+    <nav class="navbar navbar-expand-md navbar-light fixed-top navbar__opacity">
+        <div class="container">
+            <a class="navbar-brand" href="{% url 'profile' %}">
+                <img src="{% static 'img/logo.8d8f24edbb5f.svg' %}" height="55" width="189" alt="">
+            </a>
+            <button class="btn btn-outline-success me-2 shadow-none foodplan_green foodplan__border_green" onclick="history.back()">Назад</button>
+        </div>
+    </nav>
+</header>
+<main style="margin-top: calc(2rem + 75px);">
         <section>
             <div class="container">
                 <div class="row">
                     <div class="col-12 col-md-4 d-flex justify-content-center">
                         <div class="card foodplan__card_borderless">
-                            <img src="{% static 'img/circle1.png' %}" alt="">
+                            {% if dish.photo %}
+                                <img src="{{ dish.photo.url }}" alt="{{ dish.name }}" class="img-fluid rounded">
+                            {% else %}
+                                <img src="{% static 'img/circle1.png' %}" alt="{{ dish.name }}">
+                            {% endif %}
                         </div>
                     </div>
                     <div class="col-12 col-md-6 d-flex flex-column justify-content-between">
-                        <h2>Название рецепта</h2>
+                        <h2>{{ dish.name }}</h2>
+                        <div class="mb-3">
+                            <span class="badge bg-success">{{ dish.get_diet_type_display }}</span>
+                            <span class="badge bg-info">{{ dish.get_category_display }}</span>
+                            <span class="badge bg-warning">{{ dish.get_difficulty_display }}</span>
+                        </div>
+
+                        <h5>Ингредиенты:</h5>
                         <ul class="list-group list-group-flush">
-                            <li class="list-group-item">ингредиент (500г.)</li>
-                            <li class="list-group-item">ингредиент (500г.)</li>
-                            <li class="list-group-item">ингредиент (500г.)</li>
-                            <li class="list-group-item">ингредиент (500г.)</li>
-                            <li class="list-group-item">ингредиент (500г.)</li>
+                            {% for ingredient in dish.dishingredient_set.all %}
+                            <li class="list-group-item">
+                                {{ ingredient.ingredient.name }} ({{ ingredient.quantity }} {{ ingredient.ingredient.get_unit_display }})
+                            </li>
+                            {% endfor %}
                         </ul>
-                        <h6>Общая калорийность: 1000 ккал</h6>
+
+                        <div class="mt-3">
+                            <h6>Общая калорийность: {{ dish.total_calories|floatformat:0 }} ккал</h6>
+                            <h6>Время приготовления: {{ dish.cooking_time }} минут</h6>
+                            <h6>Порций: {{ dish.portions }}</h6>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Рецепт -->
+                <div class="row mt-4">
+                    <div class="col-12">
+                        <div class="card">
+                            <div class="card-body">
+                                <h4 class="card-title">Рецепт приготовления</h4>
+                                <p class="card-text">{{ dish.recipe|linebreaks }}</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </section>
     </main>
-    <footer>
-        <nav class="navbar navbar-expand-md navbar-light mt-5">
-            <div class="container p-2">
-                <a class="navbar-brand" href="#">
-                    <img src="{% static 'img/logo.8d8f24edbb5f.svg' %}" height="55" width="189" alt="">
-                </a>
-                <div class="footer__sideBtns d-flex">
-                    <a href="#">
-                        <img src="{% static 'img/vk.png' %}" height="38" width="auto" alt="">
-                    </a>
-                </div>
-            </div>
-        </nav>
-    </footer>
-    <footer class="footer pt-2" style="border-top: 1px solid lightgray;">
-        <div class="container d-flex flex-row justify-content-center mb-2">
-            <small class="text-center">
-                <h6>© Девман2022. Все права защищены. © Devman2022. All right reserved.</h6>
-                <a href="#" class="link-secondary">Политика конфиденциальности</a>
-            </small>
-        </div>
-    </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>
-</body>
+{% include 'partials/footer.html' %}
+{% endblock %}
